# trajallocpy

./: .gitignore  .gitmodules  10robots_300capacity_AC300.csv  12robots_300capacity_AC300.csv  14robots_300capacity_AC300.csv  2robots_1500capacity_AC300.csv  4robots_750capacity_AC300.csv  6robots_500capacity_AC300.csv  8robots_375capacity_AC300.csv  AC300_4agents_750capacity.csv  BST.py  CONTRIBUTING.md  LICENCE  Makefile  NaiveVisibilityGraph.py  README.md  VisibilityGraph.py  allocations.json  amagervaerket.json  environment.geojson  main.py  naive_approach_100.txt  notebook.ipynb  our_approach_100.txt  ours_10robots_200capacity_AC300.tx  ours_12robots_200capacity_AC300.tx  ours_14robots_200capacity_AC300.tx  ours_14robots_infcapacity_AC300.txt  ours_1robots_1600capacity_repeat30_VM25_13.txt  ours_1robots_infcapacity_AC300.txt  ours_2robots_1000capacity_AC300.txt  ours_2robots_1200capacity_AC300.txt  ours_4robots_500capacity_AC300.txt  ours_4robots_600capacity_AC300.txt  ours_6robots_400capacity_AC300.txt  ours_8robots_300capacity_AC300.txt  ours_naive_1robots_infcapacity_AC300.txt  ours_naive_2robots_1200capacity_AC300.txt  ours_naive_4robots_600capacity_AC300.txt  plot_benchmarks.ipynb  (+6 more)
DemaScenarios/: task_generator.py
benchmarks/: ours_1robots_1200capacity_repeat30_VM25_13.csv  ours_1robots_1600capacity_repeat30_VM25_13.csv  ours_1robots_infcapacity_AC300.csv  ours_2robots_1200capacity_AC300.csv  ours_2robots_1200capacity_repeat30_VM25_13 copy.csv  ours_2robots_1200capacity_repeat30_VM25_13.csv  ours_3robots_800capacity_repeat30_VM25_13 copy.csv  (+15 more)
(+409 files in other folders)
