
[build-system]
requires = ["setuptools", "wheel", "pep517"]
build-backend = "setuptools.build_meta"

[project]
name = "trajallocpy"
version = "0.0.3"
description = "TrajAllocPy is a Python library that provides functionality for trajectory task Allocaition using Consensus based bundle algorithm"
readme = "README.md"
authors = [
    { name = "Kasper Rømer Grøntved", email = "kaspergrontved@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.ruff]
extend-select = ["C4", "SIM", "TCH", "SLF", "S", "W"]
show-fixes = true
line-length = 150

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
build-verbosity = 1
